--- a/src/index.css
+++ b/src/index.css
@@ -256,3 +256,15 @@ body {
   -ms-transform: scale(1.3);
   -o-transform: scale(1.3);
 }
+
+
+.logout:hover {
+  border-color: red !important;
+  background-color: red  !important;
+  transition: all .5s !important;
+  overflow: hidden !important;
+  -webkit-transition: all .5s !important;
+  -moz-transition: all .5s !important;
+  -ms-transition: all .5s !important;
+  -o-transition: all .5s !important;
+}
